--- a/public/css/profilestyle.css
+++ b/public/css/profilestyle.css
@@ -8,19 +8,19 @@ html, body {
     font-size: calc(100vw / 192);
     line-height: 1.6 !important;
     letter-spacing: 0.02rem;
-    min-height: 100vh; /* Ensures full viewport height */
-    height: auto; /* Allow body to expand */
+    min-height: 100vh; 
+    height: auto;
     scroll-behavior: smooth;
     text-rendering: optimizeLegibility;
     font-feature-settings: "palt";
     -webkit-text-size-adjust: 100%;
-    overflow-x: hidden; /* Prevent horizontal scroll */
+    overflow-x: hidden; 
     overflow-y: auto !important;
 
 }
 main {
-    padding-top: 10rem; /* Adjust based on header height */
-    padding-bottom: 10rem; /* Adjust based on footer height */
+    padding-top: 10rem; 
+    padding-bottom: 10rem; 
 }
 
 
@@ -95,8 +95,8 @@ footer {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%; /* Ensure it fills the entire section */
-    z-index: -1; /* Keep it behind the text */
+    height: 100%;
+    z-index: -1; 
 }
 
 /* WebGL Canvas Styling */
@@ -106,7 +106,7 @@ canvas.webgl {
     left: 0;
     width: 100vw;
     height: 100vh;
-    z-index: -1; /* Push it to the back */
+    z-index: -1; 
 }
 
 .webgl {
@@ -115,8 +115,8 @@ canvas.webgl {
     left: 0;
     width: 100vw;
     height: 100vh;
-    z-index: -1; /* 👈 This pushes WebGL behind everything */
-    pointer-events: none; /* Prevents accidental clicks on canvas */
+    z-index: -1; 
+    pointer-events: none; 
 }
 .webgl { opacity: 1 !important; }
 .webgl { display: block !important; }
@@ -124,7 +124,7 @@ canvas.webgl {
 /* Ensure Content Stays on Top */
 #content {
     position: relative;
-    z-index: 1; /* Content stays above the canvas */
+    z-index: 1; 
 }
 .profile_headline {
     min-width: 100%;
@@ -136,7 +136,7 @@ canvas.webgl {
     justify-content: space-between;
     flex-direction: column;
     position: relative;
-    z-index: 1; /* Keeps headlines above the galaxy */
+    z-index: 1; 
 }
 .about-overlay {
     transition: right 1s ease-out;
@@ -150,9 +150,9 @@ canvas.webgl {
     z-index: 2;
 }
 #about-me .about-content h1 {
-    font-family: 'Merriweather', sans-serif; /* Change to your preferred font */
+    font-family: 'Merriweather', sans-serif; 
     font-size: 3rem;
-    font-weight: 600; /* Adjust weight if needed */
+    font-weight: 600; 
 }
 #about-me .about-content p {
     font-family: 'Merriweather', sans-serif;
